@@ -11,6 +11,7 @@ pwdx: buffer overflow fixed -- thanks Ulf Harnhammar
 procps.spec needed a slash -- thanks Jesse Brandeburg
 w: stale utmp entries snuck in via uninitialized var -- thanks Robert A Basch
 pgrep/pkill: fix some realloc-related crashes       #353894
+pgrep/pkill: g is criteria (secret PLD Linux patch)
 
 procps-3.2.5 --> procps-3.2.6
 
